# fr3_mujoco_ros1

./: README.md
fr3_controller/: CMakeLists.txt  package.xml
fr3_controller/launch/: fr3_controller.launch
fr3_controller/scripts/: fr3_controller_node.py
mujoco_ros_sim/: CMakeLists.txt  package.xml  setup.py
mujoco_ros_sim/franka_fr3/: fr3.xml  position_scene.xml  torque_scene.xml
mujoco_ros_sim/franka_fr3/common/: random_blocks.xml  table.xml
mujoco_ros_sim/launch/: mujoco_sim.launch
mujoco_ros_sim/scripts/: mujoco_sim_node.py
mujoco_ros_sim/src/mujoco_ros_sim/: utils.py
mujoco_ros_sim_msgs/: CMakeLists.txt  package.xml
mujoco_ros_sim_msgs/msg/: ImageDict.msg  JointDict.msg  SensorDict.msg
