<?xml version="1.0"?>
<package format="2">
  <name>fr3_controller</name>
  <version>0.1.0</version>
  <description>Simple FR3 controller talking to mujoco_ros_sim</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mujoco_ros_sim_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mujoco_ros_sim_msgs</exec_depend>
</package>
